--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,19 @@
+# DATA SOURCE
+
+# Setting configurations for the database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# JPA / HIBERNATE
+
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Show or not log for each sql query
 spring.jpa.show-sql=true
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
