--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-# DATA SOURCE
-
 # Setting configurations for the database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 # JPA / HIBERNATE
-
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -20,4 +17,6 @@ spring.jpa.properties.hibernate.dialect=
 spring.jpa.properties.hibernate.format_sql=true
 
 # hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.JBossStandAloneJtaPlatform
+
+server.error.include-message=always
 
